--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background-image: url("/home/v2stech/Desktop/React/Assignments/weater-app/public/background.jpg");
+  /* background-image: url("/home/v2stech/Desktop/React/Assignments/weater-app/public/background.jpg"); */
   background-position:center;
   background-repeat: no-repeat;
   background-size: cover;
